Allows for empty event values in the CSV format.
Fixes #112058